--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,21 @@ ul{
     padding-right: 20px;
 
 }
+.header__burger{
+    width: 40px;
+    height: 18px;
+    display: none;
+}
+.b1, .b2, .b3, .b4 {
+    width: 40px;
+    height: 2px;
+    background-color: rgba(0, 0, 0, 1);
+    margin-top: 4px;
+}
+.b1{
+    margin: 0;
+}
+
 
 .header__inner{
     display: flex;
@@ -92,17 +107,20 @@ ul{
 .tea_collection{
     display: flex;
     flex-direction: column;
+    
     text-align: center;
     margin-top: 396px;
     min-height: 355px;
 }
 .collection__items{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     flex-direction: row;
     gap: 0 40px;    
     align-items: end;
     text-align: center; 
-    max-height: 247px;   
+    min-height: 247px;   
 }
 .collection__item{
     display: flex;
@@ -146,7 +164,6 @@ ul{
     max-width: 704px;
    margin: 0 auto;
 }
-
 .quotation__rectangle{   
     width: 359px;
     height: 61px;
@@ -157,19 +174,17 @@ ul{
     bottom: -122px;
     z-index: -1;
 }
-
-.reviews{
+.reviews{   
     margin-top: 150px;
     background-color:rgba(247, 242, 234, 0.5);
 }
-
 .review__block{
     display: flex;
     flex-direction: column;
 }
-
 .reviews_list{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     gap: 0 26px;
     margin-bottom: 60px;
@@ -374,7 +389,7 @@ ul{
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
     margin-top: 0;
-    margin-bottom: 10;
+    margin-bottom: 10px;
 
 }
 
@@ -388,6 +403,7 @@ ul{
 .priorities__list{
     margin: 0;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
     gap:0 49px;
@@ -619,8 +635,396 @@ ul{
     margin: 5px 20px;
 }
 #logo_google-pay{
-    width:29px ;
-    height:12px ;
+    width:29px;
+    height:12px;
     margin: 4px 20px 4px 0;
 }
 
+/* адаптация для экрана 768px */
+
+@media(max-width:768px){
+    .container{
+        max-width: 768px;
+    }
+    .logo{
+        margin-left: 89px;
+    }
+    .header__inner{
+        max-width: 640px;       
+        padding: 0;
+        margin: 30px 44px;
+    }
+    .header__burger{
+        display: block;
+    }    
+   .user-actions{
+        margin: 0;
+        padding: 0;    
+    }
+   .user-actions__item-search{
+        margin-left: 30px;
+    }
+    .menu{
+        display: none;        
+    }      
+    .top{
+        background-position: bottom left;
+        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1)),url('../images/bg_img.png');
+    }
+    .top__text{
+        margin-top: 20px;
+    }
+    .top__title{
+        margin-bottom: 0;
+    }
+    .quotation__text{   
+       left: 48px;
+       bottom: -56px;
+        max-width:640px;
+        min-height: 111px;
+        font-weight: 300;
+    }
+     .quotation__rectangle{   
+        width: 273px;
+        height: 61px;
+        bottom: -55px;
+        left: 415px;
+    }
+    .tea_collection{    
+        margin-top: 351px;
+        min-height: 582px;
+        max-width: 636px;
+    }
+    .collection__title{
+        margin-bottom: 40px;
+    }
+    .collection__items{
+        gap: 0 6px;
+    }
+    .collection__item{
+        min-height: 247px;
+    }
+    .reviews{
+        margin-top: 120px;
+    }
+    .reviews_list{
+        max-width: 636px;
+        margin-left: 67px;
+        margin-bottom: 82px;
+        row-gap: 30px;      
+    }
+    .blog{
+        margin-top: 120px;
+    }
+    .join{
+        background-position: right bottom;
+        margin-top: 120px;
+    }
+    .join__inviting{
+        align-items: center;
+        min-height: 525px;
+    }
+    .join__title{
+        margin: 60px 0;
+    }
+    .join__invite{
+        flex-direction: column;
+        margin-bottom: 60px;
+        align-items: center;
+        gap: 60px;
+    }
+    .join__invait__text{
+        text-align: center;
+        max-width: 640px;
+        min-height: 120px;
+    }
+    .join__invait__subscription{
+        min-height: 117px;
+        max-width: 580px;
+    }
+    .priorities{
+        margin-top: 119px;
+    }
+    .priorities__block{
+        max-width: 638px;
+        min-height: 489px;
+        margin-left: 45px;
+        justify-content: center;
+    }
+    .priorities__list{
+        row-gap: 30px;
+        justify-content: space-between;
+        align-items:center;
+    }
+    .footer{
+        margin-top: 120px;
+        min-height: 631px;
+    }
+    .footer__content{
+        max-width: 728px;
+    }
+    .footer__content{
+        gap: 67px;
+    }
+    .productsAndCompany{
+        margin-top: 50px;       
+    }
+    .sloganAndContacts{
+        margin-top: 50px;
+        margin-bottom: 70px;      
+    }
+    .about_contacts{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .about_us{
+        gap: 52px;
+    }
+    .definition__text{
+        margin-top: 0;
+    }
+    .connect_telephone{
+        margin-bottom: 10px;
+    }
+    .social_network{
+        margin-top: 30px;
+    }
+    .Tealuxe{
+     
+        margin-bottom: 10px;
+    }
+    .pay_way{
+        margin-left: 31px;
+        margin-bottom: 12px;
+    }
+    .blog__teaBlog{
+        align-items: center;
+    }
+    .teaBlog__articles{
+        max-width: 640px;
+        column-gap: 0;
+        row-gap: 30px;
+        grid-template-columns: 98px 444px 98px;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+    }
+    #firstItem{
+        grid-area: 1/1/1/3;
+    }
+    #secondItem{
+        grid-area: 2/2/3/3;
+    }
+    #thirdItem{
+        grid-area: 3/1/4/3;
+    }
+    #fourthItem{
+        grid-area: 4/2/5/4;
+    }
+}
+/* Адаптация для экрана 480px */
+@media (max-width:480px){
+    .container{
+        max-width: 480px;
+        padding:0;
+    }
+    .header__inner{
+        margin: 10px;
+    }
+    .logo{
+        width: 39px;
+        height: 56px;
+    }
+    .top__title{
+        font-size: 40px;
+        margin-left: 9px;
+    }
+    .top__text{
+        max-width: 450px;
+        margin-left: 9px;
+        margin-bottom: 50px;
+    }
+    .quotation__text{
+        font-size: 16px;
+        font-family: "Open Sans", sans-serif;
+        left: 30px;
+        bottom: 50px;
+        min-height: 44px;
+        max-width: 376px;
+    }
+    .quotation__rectangle{
+        width: 118px;
+        height: 22px;
+        bottom: 50px;
+        left: 205px;
+    }
+    .tea_collection{
+        margin-top: 164px;        
+    }
+    .collection__title{
+        margin-bottom: 30px;        
+    }
+    .collection__items{
+        gap: 0;        
+    }    
+    .collection__item p{
+        margin-top: 10px;
+    }
+    .reviews{      
+        margin-top: 60px;      
+    }
+    .reviews__title{
+        font-size: 40px;      
+        margin: 50px 0;      
+    }
+    .reviews_list{
+       margin: 0;
+        gap:20px;
+        row-gap: 30px;
+    }
+    .reviews_item{
+        max-width: 220px;
+        min-height: 213px;
+    }
+    .blog{
+        margin-top: 60px;
+    }  
+    .teaBlog__articles{
+        max-width: 460px;        
+        row-gap: 30px;
+        grid-template-columns: 1fr;        
+    }
+    .teaBlog__Item img{
+        width: 230px;
+        height: 153px;
+    }
+    .teaBlog__Item{
+        max-width: 460px;        
+    }
+    .read{
+        font-size: 13px;
+        font-family:"Cormorant", serif;
+    }
+    .article__about{
+        min-height: 153px;
+        max-width: 210px;
+    }
+    .join{
+        margin-top: 60px;
+        background-image:none;
+    }
+    .join__title{
+        margin-top: 50px;
+        margin-bottom: 30px;
+    }
+    .join__invait__text{
+        font-size: 13px;
+        min-height: 72px;
+    }
+    .join__invite{
+        gap: 30px;
+        margin-bottom: 50px;
+        min-height: 282px;
+    }
+    .join__inviting{
+        min-height: 415px;
+    }
+    .priorities{
+        margin-top: 60px;
+        
+    }
+    .priorities__block{
+        min-height: 926px;
+        margin: 0;
+        
+
+    }
+    .priorities__title{
+        margin-bottom: 30px;
+
+        
+    }
+    .priorities__list{
+       row-gap: 50px;
+        max-width: 294px;
+        justify-content: center;
+        min-height: 848px;
+    }
+    .priorities__item{
+        
+        max-width: 294px;
+    }
+    .priorities__itemText{
+        margin-bottom: 32px;
+    }
+    .footer{
+        margin-top: 60px;
+        max-width: 480px;
+    }
+    .footer__content{
+        flex-direction: column;
+        gap: 50px;
+    }
+    .about_us{
+        gap: 133px;
+        
+    }
+    .about_contacts{
+        max-width: 460px;
+    }
+    .tea__definition{
+        min-height: 92px;
+    }
+    .productsAndCompany{
+        margin-bottom: 0;
+    }
+    .footer__block{
+        margin-top: 30px;
+    }
+    .sloganAndContacts{
+        margin: 0;
+    }
+    .definition__text{
+        max-width: 460px;
+        margin-bottom: 10px;
+    }
+    .definition__autor{
+        max-width: 298px;
+    }
+    .StayInTouch{
+        max-width: 460px;
+        min-height: 196px;
+       
+    }
+    .footer__inner__title{
+        text-align: center;
+    }
+    .StayInTouch__text{
+        margin-top: 20px;
+        text-align: center;
+    }
+    .pay_way{
+        margin-left: 153px;
+    }
+    .connect{
+        gap: 0 27px;
+        margin: 0;
+    }
+    .footer__connect{    
+        margin-top: 20px;        
+        margin-bottom: 50px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        gap: 29px;
+       
+    }
+    .social_network{
+        margin: 0;
+        
+        
+    }
+    .connect__address{
+        margin-top: 16px;
+        font-size: 18px;
+    }
+}
